--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>Fórmula E</h1>
+
+    </header>
     
+    <div class="slideshow-container">
+        <div class="slides fade">
+            <img src="images.jpeg" style="width:100%">
+        </div>
+        <div class="slides fade">
+            <img src="CARRO.jpg" style="width:100%">
+        </div>
+        <div class="slides fade">
+            <img src="VRUM.jpg" style="width:100%">
+        </div>
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
